--- a/back-end-inscricoes/package.json
+++ b/back-end-inscricoes/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "openai": "^5.9.0"
   }
 }
